--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-redux-starter-kit",
-  "version": "3.0.1",
-  "description": "Get started with React, Redux, and React-Router!",
+  "name": "start-kit",
+  "version": "1.0.0",
+  "description": "no description",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
@@ -20,14 +20,15 @@
   "author": "David Zukowski <david@zuko.me> (http://zuko.me)",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha",
+    "bootstrap": "3.3.7",
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
     "redbox-react": "^1.3.6",
@@ -65,7 +66,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "figures": "^2.0.0",
     "file-loader": "^0.11.1",
     "fs-extra": "^3.0.1",
@@ -87,7 +88,7 @@
     "sinon-chai": "^2.10.0",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
+    "webpack": "3.11.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2",
     "yargs": "^8.0.1"
