--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^15.6.2",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.0",
+    "react-router-bootstrap": "^0.24.4",
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
